--- a/Game thing.html
+++ b/Game thing.html
@@ -6,6 +6,7 @@
 <body>
     <canvas id="myCanvas" style="border:1px solid #d3d3d3;">
     Your browser does not support the HTML5 canvas tag.</canvas>
-    <script src="game-js.js"></script> 
+    <script type="text/javascript" src="levels.js"></script>
+    <script type="text/javascript" src="game-js.js"></script>
 </body>
 </html>
