tried to seperate the files, but didn't really finish anything

--- a/Game thing.html
+++ b/Game thing.html
@@ -6,7 +6,11 @@
 <body>
     <canvas id="myCanvas" style="border:1px solid #d3d3d3;">
     Your browser does not support the HTML5 canvas tag.</canvas>
+    
     <script type="text/javascript" src="levels.js"></script>
+    <script type="text/javascript" src="startup.js"></script>
+    <script type="text/javascript" src="player.js"></script>
+    <script type="text/javascript" src="enemy.js"></script>
     <script type="text/javascript" src="game-js.js"></script>
 </body>
 </html>
