Just to save my stuff

--- a/Game thing.html
+++ b/Game thing.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="startup.js"></script>
     <script type="text/javascript" src="player.js"></script>
     <script type="text/javascript" src="enemy.js"></script>
+    <script type="text/javascript" src="enemies.js"></script>
     <script type="text/javascript" src="game-js.js"></script>
 </body>
 </html>
